[tool.poetry]
name = "tasks-api"
version = "0.1.0"
description = ""
authors = ["Andrew Sturza <sturzaam@gmail.com>"]
readme = "README.md"
packages = [{include = "tasks_api"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
